[tool.poetry]
name = "storagebox"
version = "1.0.7"
homepage = "https://github.com/peter-emil/StorageBox"
description = "A reusable, idempotent, and exactly once deduplication API"
authors = ["Peter Emil Halim <peter@peteremil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.63"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
